# face-viewer-dashboard

./: -la dashboard_app.py  .env.example  .gitignore  .render-build-clean  .render-trigger  DOCUMENTATION.md  Dockerfile  INTEGRATION_GUIDE.md  IRB_COMPLIANCE_COMPLETE.md  LONG_FORMAT_IMPLEMENTATION_SUMMARY.md  Procfile  README.md  START_STUDY_SYSTEM.bat  WORKING_STUDY.py  absolute_minimal.py  all_test_participant_data.csv  analyze_test_data.py  app.py  app_dashboard_integration.py  app_fixed.py  app_integration.py  app_no_crypto.py  app_no_pandas.py  app_no_pandas_cached.py  app_production.py  app_production_5000.py  app_simplified.py  app_with_pandas.py  app_wsgi.py  auto_push.bat  build.sh  build.sh.fixed  build_clean.sh  check_abandoned_sessions.py  check_port_8080.py  config.py  create_test_csv.py  create_test_data.py  create_test_data_simple.py  dashboard_app.py  (+109 more)
.github/: PULL_REQUEST_TEMPLATE.md
admin/: __init__.py  audit.py  auth.py  auth_bp.py  permissions.py  routes.py
analysis/: cleaning.py  filters.py  long_format_processor.py  statistical_models.py  stats.py
analytics/: r_integration.py  spss_export.py
data/: .gitkeep  users.json
irb_analysis_test/: IRB_Compliance_Report.md  logistic_odds_ratios.csv  mixed_effects_coefficients.csv  statistical_model_results.json
pilot_analysis_test/: pilot_analysis_report.txt
routes/: admin_tools.py  analysis.py  analytics.py  analytics_no_pandas.py  api.py  api_variables.py  backups.py  backups_no_pandas.py  consent.py  dashboard.py  dashboard_no_pandas.py  dashboard_no_pandas.py.new  export_no_pandas.py  (+3 more)
(+375 files in other folders)
