[tool.poetry]
name = "face-viewer-dashboard"
version = "0.1.0"
description = "Dashboard for Face Half Viewer study data analysis"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
Flask-Login = "0.6.2"
Flask-WTF = "1.1.1"
# pandas removed to avoid build errors
plotly = "5.18.0"
dash = "2.14.1"
dash-bootstrap-components = "1.5.0"
cryptography = "41.0.3"
python-dotenv = "1.0.0"
Werkzeug = "2.3.7"
gunicorn = "21.2.0"
requests = "2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools>=69.0.3", "wheel>=0.42.0", "meson-python>=0.15.0", "ninja>=1.11.1"]
build-backend = "setuptools.build_meta"
